[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/ddat-gpf/runtime/state_preload/preload_handler.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/ddat-gpf/runtime/state_title/title_handler.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ddat-gpf/runtime/main.gd" type="Script" id=3]
[ext_resource path="res://src/ddat-gpf/runtime/state_exit/exit_handler.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/ddat-gpf/runtime/state_game_meta/game_meta_handler.tscn" type="PackedScene" id=5]

[node name="RuntimeMain" type="Node"]
script = ExtResource( 3 )

[node name="PreloadingHandler" parent="." instance=ExtResource( 1 )]

[node name="TitleHandler" parent="." instance=ExtResource( 2 )]

[node name="GameMetaHandler" parent="." instance=ExtResource( 5 )]

[node name="ExitHandler" parent="." instance=ExtResource( 4 )]

[connection signal="change_state" from="PreloadingHandler" to="." method="change_game_state"]
[connection signal="change_state" from="TitleHandler" to="." method="change_game_state"]
[connection signal="change_state" from="GameMetaHandler" to="." method="change_game_state"]
